--- a/mypopup.html
+++ b/mypopup.html
@@ -11,12 +11,13 @@
             <img id="logo" src="resources/banner.png" alt="LOGO" />
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="active" role="presentation"><a href="#signup">注册</a></li>
-                <li role="presentation"><a href="#login">登陆</a></li>
+                <li role="presentation"><a href="#login">登录</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="signup" role="tabpanel">
                     <form action="#">
                         <input class="form-control" name="email" type="email" placeholder="邮箱" required autofocus />
+                        <input class="form-control" name="nickname" type="text" placeholder="昵称" required />
                         <input class="form-control" name="password" type="password" placeholder="密码" required />
                         <input class="form-control" name="password2" type="password" placeholder="再次输入密码" required />
                         <input class="btn btn-primary btn-block" type="submit" value="注册" />
@@ -26,7 +27,7 @@
                     <form action="settings.html">
                         <input class="form-control" name="email" type="email" placeholder="邮箱"  autofocus />
                         <input class="form-control" name="password" type="password" placeholder="密码"  />
-                        <input class="btn btn-primary btn-block" type="submit" value="登陆" />
+                        <input class="btn btn-primary btn-block" type="submit" value="登录" />
                     </form>
                 </div>
             </div>
